--- a/DSA_2_Queue.ipynb
+++ b/DSA_2_Queue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3d206a73",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,7 @@
     "# - No space wastage\n",
     "# - Perfect for fixed-size buffers\n",
     "# - Always O(1) operations\n",
+    "# - FIFO behavior\n",
     "\n",
     "# # ❌ DRAWBACKS\n",
     "# - front & rear maintain karna tricky\n",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "e1e892c1",
    "metadata": {},
    "outputs": [
@@ -127,7 +128,7 @@
        "4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,15 +216,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "234c9221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enqueued: 10\n",
+      "Enqueued: 20\n",
+      "Enqueued: 30\n",
+      "Queue elements: 10 20 30 \n",
+      "Dequeued: 10\n",
+      "Queue elements: 20 30 \n",
+      "Enqueued: 40\n",
+      "Enqueued: 50\n",
+      "Enqueued: 60\n",
+      "Queue elements: 20 30 40 50 60 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ============================================\n",
     "#  CIRCULAR QUEUE (FIXED SIZE)\n",
     "#  FIFO but uses circular wrap-around\n",
     "#  rear = (rear + 1) % max_size\n",
+    "#  enqueue and dequeue always O(1)\n",
+    "#  enqueue logic rear = (rear + 1) % max_size\n",
+    "#  dequeue logic front = (front + 1) % max_size\n",
     "# ============================================\n",
     "\n",
     "class CircularQueue:\n",
@@ -285,20 +316,42 @@
     "            return 0\n",
     "        if self.rear >= self.front:\n",
     "            return self.rear - self.front + 1\n",
-    "        return self.max_size - (self.front - self.rear) + 1\n"
+    "        return self.max_size - (self.front - self.rear) + 1\n",
+    "    \n",
+    "\n",
+    "# Example usage\n",
+    "cq = CircularQueue()\n",
+    "cq.enqueue(10)\n",
+    "cq.enqueue(20)\n",
+    "cq.enqueue(30)\n",
+    "cq.display()    \n",
+    "cq.dequeue()\n",
+    "cq.display() \n",
+    "cq.enqueue(40)\n",
+    "cq.enqueue(50)\n",
+    "cq.enqueue(60)  # This should show overflow  \n",
+    "cq.display()\n",
+    "cq.size()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "60c67917",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ============================================\n",
-    "#  PRIORITY QUEUE (FIXED SIZE)\n",
+    "#  PRIORITY QUEUE (FIXED SIZE ARRAY IMPLEMENTATION)\n",
     "#  Removes smallest element first (min priority)\n",
     "#  Insert normally, remove min\n",
+    "#  O(n) removal due to scanning\n",
+    "#  FIFO behavior not guaranteed\n",
+    "#  Benefits:\n",
+    "# - FIFO nahi — priority-based processing\n",
+    "# - OS shortest job first (SJF) ke liye best\n",
+    "# - Real-world job prioritization\n",
     "# ============================================\n",
     "\n",
     "class PriorityQueue:\n",
@@ -342,10 +395,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "1eb8a152",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted at rear: 10\n",
+      "Inserted at rear: 20\n",
+      "Inserted at front: 5\n",
+      "Deque elements: 5 10 20 \n",
+      "Deleted from front: 5\n",
+      "Deque elements: 10 20 \n",
+      "Deleted from rear: 20\n",
+      "Deque elements: 10 \n",
+      "Inserted at front: 15\n",
+      "Inserted at rear: 25\n",
+      "Inserted at rear: 30\n",
+      "Inserted at front: 2\n",
+      "Deque elements: 2 15 10 25 30 \n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================\n",
     "#  DEQUE (DOUBLE ENDED QUEUE)\n",
@@ -438,7 +511,26 @@
     "            if i == self.rear:\n",
     "                break\n",
     "            i = (i + 1) % self.max_size\n",
-    "        print()\n"
+    "        print()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "dq = Deque()\n",
+    "dq.insert_rear(10)\n",
+    "dq.insert_rear(20)\n",
+    "dq.insert_front(5)\n",
+    "dq.display()            \n",
+    "dq.delete_front()\n",
+    "dq.display()\n",
+    "dq.delete_rear()\n",
+    "dq.display()\n",
+    "dq.insert_front(15)\n",
+    "dq.insert_rear(25)\n",
+    "dq.insert_rear(30)\n",
+    "dq.insert_front(2)  # This should show overflow\n",
+    "dq.display()    \n",
+    "\n"
    ]
   },
   {
