--- a/DSA_2_Queue.ipynb
+++ b/DSA_2_Queue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "3d206a73",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "e1e892c1",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "234c9221",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "60c67917",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "1eb8a152",
    "metadata": {},
    "outputs": [
@@ -535,11 +535,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a1bfaf40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "4\n",
+      "False\n",
+      "11\n",
+      "10\n",
+      "[55, 7, 8, 5, 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DEQUE IMPLEMENTATION USING PYTHON CLASS LIST\n",
+    "# Deque implementaion in python\n",
+    "\n",
+    "class Deque:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.items == []\n",
+    "\n",
+    "    def addRear(self, item):\n",
+    "        self.items.append(item)\n",
+    "\n",
+    "    def addFront(self, item):\n",
+    "        self.items.insert(0, item)\n",
+    "\n",
+    "    def removeFront(self):\n",
+    "        return self.items.pop(0)\n",
+    "\n",
+    "    def removeRear(self):\n",
+    "        return self.items.pop()\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.items)\n",
+    "\n",
+    "\n",
+    "d = Deque()\n",
+    "print(d.isEmpty())\n",
+    "d.addRear(8)\n",
+    "d.addRear(5)\n",
+    "d.addFront(7)\n",
+    "d.addFront(10)\n",
+    "print(d.size())\n",
+    "print(d.isEmpty())\n",
+    "d.addRear(11)\n",
+    "print(d.removeRear())\n",
+    "print(d.removeFront())\n",
+    "d.addFront(55)\n",
+    "d.addRear(45)\n",
+    "print(d.items)"
+   ]
   }
  ],
  "metadata": {
