BST Operations Added

--- a/DSA_7_Tree_Binary_Tree.ipynb
+++ b/DSA_7_Tree_Binary_Tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "844ee817",
    "metadata": {},
    "outputs": [],
@@ -175,13 +175,98 @@
    "execution_count": null,
    "id": "776f3b51",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 4 5 3 7 \n",
+      "4 5 2 7 3 1 \n",
+      "4 2 5 1 3 7 "
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "def build_tree_level(arr):\n",
+    "    if not arr or arr[0] == -1:\n",
+    "        return None\n",
+    "\n",
+    "    root = Node(arr[0])\n",
+    "    q = deque([root])\n",
+    "    i = 1\n",
+    "\n",
+    "    while q and i < len(arr):\n",
+    "        curr = q.popleft()\n",
+    "\n",
+    "        # Left child\n",
+    "        if arr[i] != -1:\n",
+    "            curr.left = Node(arr[i])\n",
+    "            q.append(curr.left)\n",
+    "        i += 1\n",
+    "\n",
+    "        # Right child\n",
+    "        if i < len(arr) and arr[i] != -1:\n",
+    "            curr.right = Node(arr[i])\n",
+    "            q.append(curr.right)\n",
+    "        i += 1\n",
+    "\n",
+    "    return root\n",
+    "# Example usage:\n",
+    "arr = [1, 2, 3, 4, 5, -1, 7]\n",
+    "root = build_tree_level(arr)\n",
+    "\n",
+    "def inorder_traversal(node):\n",
+    "    if node:\n",
+    "        inorder_traversal(node.left)\n",
+    "        print(node.data, end=' ')\n",
+    "        inorder_traversal(node.right)\n",
+    "\n",
+    "def preorder_traversal(node):\n",
+    "    if node:\n",
+    "        print(node.data, end=' ')\n",
+    "        preorder_traversal(node.left)\n",
+    "        preorder_traversal(node.right)  \n",
+    "\n",
+    "def postorder_traversal(node):\n",
+    "    if node:\n",
+    "        postorder_traversal(node.left)\n",
+    "        postorder_traversal(node.right)\n",
+    "        print(node.data, end=' ')   \n",
+    "\n",
+    "# Testing traversals\n",
+    "preorder_traversal(root)  # Output: 1 2 4 5 3 7\n",
+    "print()\n",
+    "postorder_traversal(root) # Output: 4 5 2 7 3 1\n",
+    "print()\n",
+    "inorder_traversal(root)  # Output: 4 2 5 1 3 7"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
