--- a/DSA_Tree_BST.ipynb
+++ b/DSA_Tree_BST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "493a3163",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "bf696d6a",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,9 @@
       "Count of nodes in BST: 7\n",
       "Count of leaf nodes in BST: 4\n",
       "Maximum value in BST: 80\n",
-      "Minimum value in BST: 20\n"
+      "Minimum value in BST: 20\n",
+      "Is 40 present in BST?: True\n",
+      "Is 90 present in BST?: False\n"
      ]
     }
    ],
@@ -153,12 +155,75 @@
     "    return find_maximum(root), find_minimum(root)\n",
     "\n",
     "\n",
+    "#Check if a value exists in BST\n",
+    "def search_bst(root, key):\n",
+    "    if root is None:\n",
+    "        return False\n",
+    "    if root.data == key:\n",
+    "        return True\n",
+    "    elif key < root.data:\n",
+    "        return search_bst(root.left, key)\n",
+    "    else:\n",
+    "        return search_bst(root.right, key)\n",
+    "    \n",
+    "\n",
+    "#Check If Tree id Balanced\n",
+    "def is_balanced(root):\n",
+    "    if root is None:\n",
+    "        return True\n",
+    "    \n",
+    "    left_height = height(root.left)\n",
+    "    right_height = height(root.right)\n",
+    "    \n",
+    "    if abs(left_height - right_height) > 1:\n",
+    "        return False\n",
+    "    \n",
+    "    return is_balanced(root.left) and is_balanced(root.right)\n",
+    "    \n",
+    "#Check if tree if BST without min and max values\n",
+    "def is_bst(root):\n",
+    "    if root is None:\n",
+    "        return True\n",
+    "    \n",
+    "    if root.left and root.left.data >= root.data:\n",
+    "        return False\n",
+    "    if root.right and root.right.data <= root.data:\n",
+    "        return False\n",
+    "    \n",
+    "    return is_bst(root.left) and is_bst(root.right)\n",
+    "\n",
+    "\n",
+    "#is_complete_tree function to check if a binary tree is complete using while loop\n",
+    "#BFS me NULL ke baad koi valid node nahi milni chahiye → tab tree complete hota hai.\n",
+    "def is_complete_tree(root):\n",
+    "    if root is None:\n",
+    "        return True\n",
+    "    \n",
+    "    queue = []\n",
+    "    queue.append(root)\n",
+    "    end = False  # Flag to indicate if we have seen a NULL node\n",
+    "    \n",
+    "    while queue:\n",
+    "        current = queue.pop(0)\n",
+    "        \n",
+    "        if current is None:\n",
+    "            end = True  # Once we see a NULL, all following nodes must also be NULL\n",
+    "        else:\n",
+    "            if end:\n",
+    "                return False  # Found a non-NULL node after a NULL, not complete\n",
+    "            queue.append(current.left)\n",
+    "            queue.append(current.right)\n",
+    "    \n",
+    "    return True\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "root = None\n",
     "keys = [50, 30, 20, 40, 70, 60, 80]\n",
     "for key in keys:\n",
     "    root = insert(root, key)\n",
+    "\n",
+    "\n",
     "\n",
     "print(\"Inorder traversal:\")\n",
     "inorder_traversal(root)  # Output: 20 30 40 50 60 70 80\n",
@@ -179,6 +244,11 @@
     "max_value, min_value = find_max_min(root)\n",
     "print(\"Maximum value in BST:\", max_value)  # Output: Maximum value in BST: 80\n",
     "print(\"Minimum value in BST:\", min_value)  # Output: Minimum value in BST: 20\n",
+    "\n",
+    "key_to_search = 40\n",
+    "print(f\"Is {key_to_search} present in BST?:\", search_bst(root, key_to_search))  # Output: Is 40 present in BST?: True\n",
+    "key_to_search = 90\n",
+    "print(f\"Is {key_to_search} present in BST?:\", search_bst(root, key_to_search))  # Output: Is 90 present in BST?: False\n",
     "\n",
     "\n",
     "\n",
